# louke

./: .gitignore  .pre-commit-config.yaml  .scout-test-pr-placeholder  LICENSE  Makefile  README.md  README.zh.md  install.bat  install.ps1  install.sh  opencode.json  pyproject.toml  test_sample.py
.github/: RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  RELEASE_NOTES_v0.6.10.md  RELEASE_NOTES_v0.6.11.md  RELEASE_NOTES_v0.6.12.md  RELEASE_NOTES_v0.6.13.md  RELEASE_NOTES_v0.6.14.md  RELEASE_NOTES_v0.6.2.md  RELEASE_NOTES_v0.6.3.md  RELEASE_NOTES_v0.6.4.md  RELEASE_NOTES_v0.6.5.md  RELEASE_NOTES_v0.6.6.md  RELEASE_NOTES_v0.6.7.md  RELEASE_NOTES_v0.6.8.md  RELEASE_NOTES_v0.6.9.md  RELEASE_NOTES_v0.7.1.md  RELEASE_NOTES_v0.7.2.md  RELEASE_NOTES_v0.7.3.md  RELEASE_NOTES_v0.7.4.md  RELEASE_NOTES_v0.8.0.md
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml  louke-ci.yml  release.yml
.holdpoint/project/: project-info.md
.holdpoint/wiki/: overview.md
.louke/: qwen-review-v0.6-009.md
.louke/opencode/: instances.json
.louke/project/: history.md  project-info.md  project.toml  release-contract-bundle.json  v0.12-agent-capability-map.md  v0.12-programmatic-workflows.md  v0.7-release-todo.md
.louke/scripts/: review-lock.sh  review-watcher.sh
.louke/wiki/: consolidated.md  log.md
.specforge/specs/: project-info.md
agents/: Arbiter.md  Archer.md  Auditor.md  Clerk.md  Cynic.md  Devon.md  Forge.md  Guide.md  Herald.md  Hunter.md  Judge.md  Keeper.md  Lex.md  Librarian.md  Maestro.md  Prism.md  Probe.md  REVIEW-PAIRINGS.md  ROSTER.md  Sage.md  Scout.md  Shield.md  Warden.md
docs/: architecture.mmd  cookbook.md  v0.12_l3_opencode_smoke_runbook.md  v0.12_storage_model.md  v0.13-out-of-scope.md  workflow.md
docs/v0121_evidence/: batch0_baseline.txt  batch1_package.md  batch2_routes.md  batch3_test_layering.md  batch4_ci.md  batch5_server_chromium.md  v0.12.1_release_audit.md
holdpoint/: __init__.py  __main__.py  _common.py  _security.py  _tests.py  archer.py  devon.py  judge.py  lex.py  librarian.py  maestro.py  prism.py  sage.py  scout.py  shield.py  warden.py
holdpoint/_tools/: add_frontmatter.py  check_assertions.py  check_foundation.py  check_identity.py  ci_scan.py  verify_acceptance.py  verify_issue_schema.py
holdpoint/agents/: Devon.md  Judge.md  Lex.md  Librarian.md  Prism.md  REVIEW-PAIRINGS.md  Sage.md  Shield.md  Warden.md
holdpoint/templates/: acceptance.md  bug-fix.md  issues.md  prd.md  project-info.md  security-checklist.md  spec.md  test-plan.md
hp/: __main__.py  _tests.py  archer.py  keeper.py  maestro.py  sage.py  scout.py  shield.py  warden.py
louke/: __init__.py  __main__.py  _color.py  _common.py  _security.py  _tests.py  agent.py  archer.py  backlog_api.py  board.py  cli_v12.py  devon.py  e2e.py  files_api.py  init.py  intent_api.py  judge.py  keeper.py  lex.py  librarian.py  maestro.py  models.py  opencode_api.py  paths.py  prism.py  release_identity.py  sage.py  schema.py  scout.py  security.py  serve.py  shield.py  stage_results.py  tasks_api.py  warden.py  wiki_api.py
louke/_tools/: add_frontmatter.py  audit_recovery.py  check_acs.py  check_assertions.py  check_foundation.py  check_identity.py  ci_contract.py  ci_scan.py  contract_registry.py  design_contract.py  discuss.py  git_diff_quote_resolver.py  machine_contract.py  pre_commit.py  prompt_bundle.py  quote_parser.py  release_version.py  schema_migration.py  validation_feedback.py  verify_acceptance.py  verify_issue_schema.py
louke/agents/: Archer.md  Devon.md  Guide.md  Judge.md  Keeper.md  Lex.md  Librarian.md  Maestro.md  Prism.md  REVIEW-PAIRINGS.md  Sage.md  Scout.md  Scribe.md  Shield.md  Story.md  Warden.md
louke/opencode/: adapter.py  dispatch.py  in_memory.py  persistence.py  process.py  real.py
louke/runtime/: __init__.py  agent_bindings.py  archer_contract.py  architecture.py  artifact_version.py  atomicity.py  attempt_detail.py  audit_observability.py  bug_fix_variant.py  candidate_prism_review.py  capabilities.py  catalog.py  context_manifest.py  contract_gates.py  domain.py  (+63 more)
qf/: __init__.py  __main__.py  _common.py  _security.py  devon.py  judge.py  keeper.py  lex.py  librarian.py  maestro.py  prism.py  shield.py
specs/: project-info.md
templates/: acceptance.md  bug-fix.md  issues.md  project-info.md  spec.md  task-log.md  task-plan.md  test-plan.md
tests/: conftest.py  runner-manifest.toml  test_agent_frontmatter.bats  test_archer.bats  test_archer_validate_arch.bats  test_backlog_api.py  test_backward_compat.bats  test_board.bats  test_board_opencode_dual_format.bats  test_board_opencode_skills.bats  test_branch_naming.bats  test_bug_008_project_creation.bats  test_bug_009_commit_ref_format.bats  test_bug_010_scout_foundation.bats  test_ci_parity.bats  test_ci_tools.bats  test_cli_contract.bats  test_commit_push_rule.bats  test_devon_commit_rgr.bats  test_devon_no_verify.bats  test_doc_sync.bats  test_documents_api.py  test_file_security.py  test_files_api.py  test_fix_094.bats  test_fr0101_deferred.py  test_git_diff_resolver.bats  test_host_ci_agent_contract.bats  test_identity_check.bats  test_init.bats  test_init_adopt_flow.bats  test_init_adopt_path.bats  test_inline_discussion.bats  test_intent_api.py  test_issue_form.bats  test_keeper_gate.bats  test_lex.py  test_louke_install.bats  test_louke_paths.py  test_maestro.bats  (+31 more)
tests/fixtures/v014_003_workflow_reflow/python-host/: README.md  host-project-facts.json  pyproject.toml
tests/fixtures/v014_design_contracts/python-host/: README.md  host-project-facts.json  pyproject.toml
tests/fixtures/v014_design_contracts/python-host/src/demo_pkg/: __init__.py  __main__.py
tools/: add_frontmatter.py  build_with_index_fallback.py  check_ac_traceability.py  check_acs.py  check_foundation.py  check_identity.py  ci_scan.py  git_diff_quote_resolver.py  install_vscode_agents.sh  lint_bats_names.sh  louke_python_release_adapter.py  quote_parser.py  specforge_board.py  verify_acceptance.py  verify_issue_schema.py
wiki/: consolidated.md  index.md  log.md  overview.md
(+894 files in other folders)
