[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "louke"
version = "0.7.4"
description = "Lòukè - beyond vibes, into craft"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "louke team" }
]
keywords = ["spec-driven", "tdd", "multi-agent", "craft", "hold-point", "agent-framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pre-commit>=3.0,<5.0",
    "markdown>=3.6,<4.0",
    "starlette>=0.38,<1.0",
    "uvicorn>=0.30,<1.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
lk = "louke.__main__:main"

[project.urls]
Homepage = "https://github.com/zillionare/louke"
Repository = "https://github.com/zillionare/louke"
Issues = "https://github.com/zillionare/louke/issues"

[tool.setuptools]
packages = ["louke", "louke._tools", "louke.web"]

[tool.setuptools.package-data]
louke = [
    "py.typed",
    "agents/*.md",
    "agents/_protocols/*.md",
    "agents/_skills/*/*.md",
    "templates/*.md",
    "templates/pre-commit/*.yaml",
    "templates/pre-commit/*.yml",
    "templates/pre-commit/*.md",
    ".github/ISSUE_TEMPLATE/*.yml",
]
