[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "louke"
version = "0.14.0"
description = "Lòukè - beyond vibes, into craft"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "louke team" }
]
keywords = ["spec-driven", "tdd", "multi-agent", "craft", "hold-point", "agent-framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    "pre-commit>=3.0,<5.0",
    "markdown>=3.6,<4.0",
    "pyyaml>=6.0,<7.0",
    "starlette>=0.38,<1.0",
    "uvicorn>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "jsonschema>=4.0,<5.0",
    "packaging>=24.2,<27",
]

[project.scripts]
lk = "louke.__main__:main"

[project.urls]
Homepage = "https://github.com/zillionare/louke"
Repository = "https://github.com/zillionare/louke"
Issues = "https://github.com/zillionare/louke/issues"

[tool.setuptools.packages.find]
include = ["louke*"]

[tool.setuptools.package-data]
louke = [
    "py.typed",
    "agents/Archer.md",
    "agents/Devon.md",
    "agents/Judge.md",
    "agents/Lex.md",
    "agents/Librarian.md",
    "agents/Maestro.md",
    "agents/Prism.md",
    "agents/Sage.md",
    "agents/Shield.md",
    "agents/Scribe.md",
    "agents/_protocols/*.md",
    "agents/_skills/*/*.md",
    "templates/*.md",
    "templates/pre-commit/*.yaml",
    "templates/pre-commit/*.yml",
    "templates/pre-commit/*.md",
    ".github/ISSUE_TEMPLATE/*.yml",
    "schemas/registry.json",
    "schemas/machine-contracts/*/*.json",
    "schemas/agent-io/*/*.json",
]
"louke.web" = [
    "assets/*",
]

[tool.coverage.run]
source = ["louke"]

[tool.coverage.report]
fail_under = 95

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end browser test (Playwright)",
    "integration: integration test (real TestClient / temp store / HTTP), not a browser E2E (see gap-analysis §3 P1-1 / issue #177)",
    "real_opencode: L3 smoke test that requires a live OpenCode provider (run only when LOUKE_RUN_REAL_OPENCODE=1 and real credentials are set)",
    "chromium_e2e: single-Chromium product journey against an installed-wheel server (gap-analysis §4 Batch 5 / issue #180); skips when Chromium is not installed",
]

# Pragmatic mypy config — the codebase predates strict mypy and would need a
# large pass to make --strict pass cleanly. Goal: keep mypy CI useful (catch
# new regressions, real type-confusion bugs) without forcing a big legacy
# annotation sweep in this PR.
#
# Categories we explicitly allow (each is documented inline):
#   * Library stubs (yaml, markdown, etc.) — not shipped as PEP 561 stubs.
#   * tomllib — stdlib in 3.11+, but we still support 3.9 / 3.10 where it
#     is absent (the code already guards with `try: import tomllib`).
#   * PEP 484 implicit Optional — the codebase widely uses `x: T = None`
#     shorthand; rewriting all sites to `x: Optional[T] = None` is out of
#     scope for now.
#   * Union-attr / call-overload / index / attr-defined on dynamic data
#     (JSON decoded into `object`, regex Match results, etc.) — too noisy.
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = false
warn_redundant_casts = false
disable_error_code = [
    "assignment",
    "union-attr",
    "arg-type",
    "call-overload",
    "index",
    "attr-defined",
    "return-value",
    "var-annotated",
    "syntax",
    "operator",
    "has-type",
    "import-untyped",
]
