[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shield-python-host-fixture"
version = "0.14.0"
description = "Fixture host project for v0.14-003 Shield integration tests"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
