[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "demo-pkg"
version = "0.1.0"
description = "Shield fixture: minimal Python host for v0.14-002 NFR-0300 heterogeneity tests"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
demo-cli = "demo_pkg.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
